Fix: API定義を修正
